@@ -1,3 +1,7 @@
+2012-03-16  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.ada/set_pckd_arr_elt: New testcase.
+
 2012-03-16  Gary Benson  <gbenson@redhat.com>
 
 	PR breakpoints/10738
